...
  leftNode,
  onPress,
  labelProps = defaultLabelProps,
  hitSlop = 0,
}: DropdownLabelProps) => {
  return (
    <Pressable testID="dropdown-label-view" onPress={onPress} hitSlop={hitSlop}>
      <View flexDirection="row" columnGap="$2" justifyContent="space-between" alignItems="center">
        {leftNode}

        <View justifyContent={'center'}>
          <View flexDirection="row" alignItems="center" columnGap="$1">
            <Text fontSize={labelProps.fontSize} fontWeight={labelProps.fontWeight} numberOfLines={1} maxWidth={170}>
...
