...
      params: { txId },
    })
  }

  return (
    <View>
      <SafeButton secondary size="$sm" onPress={goToAdvancedDetails} testID="transaction-details-button">
        {title}
      </SafeButton>
    </View>
  )
}

